--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jquery": "^3.6.4",
+    "react-router-dom": "^6.10.0",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
