--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "vite": "^4.2.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jquery": "^3.6.4",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "vite-plugin-eslint": "^1.8.1"
   }
