--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "axios": "^1.4.0",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "redux-chunk": "^1.0.11"
   }
 }
