--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "dotenv": "^16.1.1",
     "jquery": "^3.6.4",
+    "jwt-simple": "^0.5.6",
+    "mongoose": "^7.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
