--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "cypress": "^10.11.0",
     "dotenv": "^16.1.1",
     "jquery": "^3.6.4",
     "jwt-simple": "^0.5.6",
